@@ -217,7 +217,6 @@ module Spec
       # See Spec::Rails::DSL::ControllerEvalContext for information
       # about methods you can use in your Controller Specs
       class ControllerBehaviour < Spec::DSL::Behaviour
-        
         def execution_context(example=nil) # :nodoc:
           instance = execution_context_class.new(example)
           if controller_class_name.nil? && !described_type.nil?
@@ -234,6 +233,7 @@ module Spec
         end
 
         def before_eval # :nodoc:
+          @description[:behaviour_type] = :controller
           inherit Spec::Rails::DSL::ControllerEvalContext
           prepend_before {setup}
           append_after {teardown}
