@@ -80,6 +80,7 @@ module Spec
       #   end
       class HelperBehaviour < Spec::DSL::Behaviour
         def before_eval #:nodoc:
+          @description[:behaviour_type] = :helper
           inherit Spec::Rails::DSL::HelperEvalContext
           prepend_before {setup}
           append_after {teardown}
